# HPC-DFE-Paris-Saclay

./: .gitignore  README.md
.github/workflows/: blank.yml  main.yml
documentation/: README.md  deepnote.md  hdf5.md  inspector.md  mpi.md  paraview.md  readme2tex.md  ruche.md  ssh_key.md  vscode.md
exercices/mpi/1_initialization/: README.md  main.F90  main.cpp
exercices/mpi/2_blocking_com/: README.md  main.F90  main.cpp
exercices/mpi/3_sendrecv/: README.md  main.F90  main.cpp
exercices/performance/: README.md  main.py  ruche.slurm  strong.slurm  strong_scalability.py  weak.slurm  weak_scalability.py
exercices/ruche/: 1_start.md  2_slurm.md  3_python.md  4_parallel.md
support/: Introduction_HPC.odp  M2_DFE_HPC_2018-2019_partie_II_openmp.odp  M2_DFE_HPC_2019-2020_partie_V_bonnes_pratiques.odp  MPI.odp  MPI.pptx  OpenMP.odp  bonnes_pratiques.odp  mesure_performance.odp  mesure_performance.pptx
support/materiel/: amdahl_efficiency.py  amdahl_speedup.py  equation.tex  mandelbulb_topology.pptx
tp/: README.md
tp/collision/: README.md  README.md.html  README_GH.md.html  README_source.md
tp/diffusion/: README.md
tp/life/: README.md  README_source.md
tp/mandelbulb/: README.md  README_source.md  environment.yml  requirements.txt
tp/marble/: README.md  README.md.html  README_source.md
tp/maxwell/: README.md  README_source.md
tp/onde/: README.md  README.md.html  README_GH.md  README_GH.md.html  README_source.md
tp/onde/python/: plot.py  (+9 more)
tp/shallow/: README.md  README_source.md
tp/shallow/cpp/kokkos/: CMakeLists.txt  README.md  launch.slurm  main.cpp
(+295 files in other folders)
